openshift/lab31/network-policy.yml
# nginx-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-nginx-pods
spec:
  podSelector:
    matchLabels:
      app: static-website
  ingress:
  - from:
    - podSelector: {}
  policyTypes:
  - Ingress
